--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>NEVATEK</title>
+    <title>NEVAKET</title>
 </head>
 <body>
     <div class="intro">
@@ -41,6 +41,9 @@
                     </div>
                 </div>
             </header>
+            <div class="order">
+                <h1>NEVAKET</h1>
+            </div>
         </div>
     </div>
 
