--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
                                 <img src="img/TwitterLogo.svg" alt="">
                             </a>
                         </div>
+                        <div class="menu-btn">
+                            <span></span>
+                        </div>
+                        <div class="menu-block">
+                            <a href="#"  id="about-btn">About us</a>
+                            <a href="#"  id="serv-btn">Our services</a>
+                            <a href="#"  id="partners-btn">Our partners</a>
+                            <a href="#"  id="contacts-btn">Contacts</a>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -65,22 +74,25 @@
     <section class="feedback">
         <div class="fb__item">
             <img src="img/ThumbsUp.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Quasi, debitis suscipit? 
-                Quae, repellendus excepturi?</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Id hendrerit tortor in feugiat.
+            </p>
             
         </div>
         <div class="fb__item brdr">
             <img src="img/ThumbsUp.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Quasi, debitis suscipit? 
-                Quae, repellendus excepturi?</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Id hendrerit tortor in feugiat.
+            </p>
         </div>
         <div class="fb__item">
             <img src="img/ThumbsUp.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, 
-                adipisicing elit. Quasi, debitis suscipit? 
-                Quae, repellendus excepturi?</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Id hendrerit tortor in feugiat.
+            </p>
         </div>
     </section>
     <section class="projects">
