--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- CAROUSEL -->
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>NEVAKET</title>
+    <title>NAVAKET</title>
 </head>
 <body>
     <div class="intro">
@@ -65,12 +65,12 @@
             </header>
             <div class="order">
                 <div class="order__item">
-                    <h1>NEVAKET</h1>
+                    <h1>NAVAKET</h1>
                     <h2>КЛУБНЫЙ ДОМ</h2>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Incidunt dolores quisquam aliquid itaque delectus dolore 
-                        quibusdam vel.
+                        Клубный дом NAVAKET - первый в своем роде дом в Кыргызстане. 
+                        Формат клубных домов отсылает нас к тем самым фамильным жилищам 
+                        с длинной историей и воспоминаниями. 
                     </p>
                     <input type="text" placeholder="ИМЯ">
                     <input type="text" placeholder="НОМЕР">
