--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <!-- CAROUSEL -->
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>NAVAKET</title>
@@ -72,10 +71,44 @@
                         Формат клубных домов отсылает нас к тем самым фамильным жилищам 
                         с длинной историей и воспоминаниями. 
                     </p>
-                    <input type="text" placeholder="ИМЯ">
-                    <input type="text" placeholder="НОМЕР">
-                    <button class="intro__order" type="submit">ЗАКАЗАТЬ ЗВОНОК</button>
-    
+                    <input type="text" placeholder="ИМЯ" class="order-input">
+                    <input type="text" placeholder="НОМЕР" class="order-input">
+                    <button class="intro__order" type="submit">ЗАКАЗАТЬ ЗВОНОК</button>                    
+
+
+                    <button id="show">
+                        ЗАКАЗАТЬ ЗВОНОК
+                    </button>
+                    <div id="lightbox_container">
+                        <div id="overlay"></div>
+                        <div id="lightbox">
+                            <div id="hide">
+                                <img src="img/close.svg" alt="">
+                            </div>
+                            <div class="modal-container">
+                                <p class="modal-p">
+                                    Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing elit. 
+                                    Facilisis dis mi enim cursus 
+                                    quis euismod quam. Amet, consectetur nec sit nec 
+                                    fermentum aliquam neque, in.
+                                </p>
+                                <p class="modal-name">
+                                    ВАШЕ ИМЯ
+                                </p>
+                                <input type="text" placeholder="ИМЯ" class="modal-input">
+                                <p class="modal-phone">
+                                    ВАШ ТЕЛЕФОН
+                                </p>
+                                <input type="text" placeholder="ИМЯ" class="modal-input">
+
+                                <button class="modal-button">
+                                    ЗАКАЗАТЬ ЗВОНОК
+                                </button>
+                            </div>
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -313,6 +346,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
+    <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
