--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         с длинной историей и воспоминаниями. 
                     </p>
                     <input type="text" placeholder="ИМЯ" class="order-input">
-                    <input type="text" placeholder="НОМЕР" class="order-input">
+                    <input type="number" placeholder="НОМЕР" class="order-input">
                     <button class="intro__order" type="submit">ЗАКАЗАТЬ ЗВОНОК</button>                    
 
 
@@ -100,7 +100,7 @@
                                 <p class="modal-phone">
                                     ВАШ ТЕЛЕФОН
                                 </p>
-                                <input type="text" placeholder="ИМЯ" class="modal-input">
+                                <input type="number" placeholder="ИМЯ" class="modal-input">
 
                                 <button class="modal-button">
                                     ЗАКАЗАТЬ ЗВОНОК
@@ -176,7 +176,7 @@
                         <p class="contact__p">Ваше имя</p>
                         <input type="text" name="name" id="" placeholder="ИМЯ">
                         <p class="contact__p">Номер телефона</p>
-                        <input type="text" name="" id="" placeholder="+996">
+                        <input type="number" name="" id="" placeholder="+996">
                         <br>
                         <button class="contact__order" type="submit">ЗАКАЗАТЬ ЗВОНОК</button>
                     </div>
@@ -283,7 +283,7 @@
                         <p class="contact__p">Ваше имя</p>
                         <input type="text" name="name" id="" placeholder="ИМЯ">
                         <p class="contact__p">Номер телефона</p>
-                        <input type="text" name="" id="" placeholder="+996">
+                        <input type="number" name="" id="" placeholder="+996">
                         <br>
                         <button class="contact__order" type="submit">ЗАКАЗАТЬ ЗВОНОК</button>
                     </div>
