header fixed: bg-color changed, history section fixed

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="header">
                         <div class="logo">
                             <a href="index.html">
-                                LOGO
+                                <img src="img/logo_navaket.png" alt="">
                             </a>
                         </div>
                         <div class="links">
@@ -143,16 +143,13 @@
 
         <div class="carousel">
                 <div class="preview">
-                    <img src="img/slide1.png" >
+                    <img src="img/slider/Logo_wall_1.jpg" >
                 </div>
                 <div class="preview">
-                    <img src="img/slide1.png">
+                    <img src="img/slider/Logo_wall_2.jpg">
                 </div>
                 <div class="preview">
-                    <img src="img/slide1.png" >
-                </div>
-                <div class="preview">
-                    <img src="img/slide1.png" >
+                    <img src="img/slider/Logo_wall_3.jpg" >
                 </div>
             </div>
         </div>
@@ -301,8 +298,8 @@
                             <img src="img/home.svg" alt="">АДРЕС
                         </div>
                         <p>
-                            Lorem ipsum dolor sit amet 
-                            <br> consectetur adipisicing elit.
+                            Бизнес центр 79, офис 503
+                            <br> Ул. Исанова 79
                         </p>
                     </div>
                     <div class="foo_item">
